# ScreenLingo

./: .gitignore  CMakeLists.txt  README.md  patch1.patch  patch_inc.patch  setup.ps1  tmp_application.patch  项目需求梳理.txt
.claude/: CLAUDE.md  settings.local.json
.claude/skills/algorithmic-art/: .openskills.json
.claude/skills/brand-guidelines/: .openskills.json
.claude/skills/canvas-design/: .openskills.json
.claude/skills/claude-api/: .openskills.json
.claude/skills/doc-coauthoring/: .openskills.json
.claude/skills/docx/: .openskills.json
.claude/skills/frontend-design/: .openskills.json
.claude/skills/internal-comms/: .openskills.json
.claude/skills/mcp-builder/: .openskills.json
.claude/skills/pdf/: .openskills.json
.claude/skills/pptx/: .openskills.json
.claude/skills/skill-creator/: .openskills.json
.claude/skills/slack-gif-creator/: .openskills.json
.claude/skills/template/: .openskills.json
.claude/skills/theme-factory/: .openskills.json
.claude/skills/web-artifacts-builder/: .openskills.json
.claude/skills/webapp-testing/: .openskills.json
.claude/skills/xlsx/: .openskills.json
build2/: CMakeCache.txt
build3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ScreenLingo.sln  ScreenLingo.vcxproj  ScreenLingo.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build3/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build3/ScreenLingo_autogen/: mocs_compilation_Debug.cpp
build3/ScreenLingo_autogen/include_Debug/5UQKT6YRMN/: moc_DxgiCaptureEngine.cpp  moc_DxgiCaptureEngine.cpp.d  moc_ICaptureEngine.cpp.d
build3/ScreenLingo_autogen/include_Debug/6ZLIQGMFDZ/: moc_WindowsOcrEngine.cpp  moc_WindowsOcrEngine.cpp.d
build3/ScreenLingo_autogen/include_Debug/FX4633N3NR/: moc_HotkeyManager.cpp.d
build3/ScreenLingo_autogen/include_Debug/ISMKEKEPX5/: moc_SignalBus.cpp.d
build3/ScreenLingo_autogen/include_Debug/LXWRGEM2EP/: moc_TranslatorManager.cpp.d
build3/ScreenLingo_autogen/include_Debug/POF6FWQU44/: moc_DeepLTranslator.cpp  moc_DeepLTranslator.cpp.d  moc_OpenAITranslator.cpp  moc_OpenAITranslator.cpp.d
build3/ScreenLingo_autogen/include_Debug/QD3TEUTSKF/: moc_AreaSelector.cpp  moc_AreaSelector.cpp.d
build3/ScreenLingo_autogen/include_Debug/QNGMSASXSL/: moc_OverlayManager.cpp  moc_OverlayManager.cpp.d  moc_TranslationOverlay.cpp  moc_TranslationOverlay.cpp.d
build3/ScreenLingo_autogen/include_Debug/UMXHS6U622/: moc_TrayManager.cpp  moc_TrayManager.cpp.d
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mingw/ScreenLingo_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_mingw/ScreenLingo_autogen/5UQKT6YRMN/: moc_DxgiCaptureEngine.cpp  moc_DxgiCaptureEngine.cpp.d  moc_ICaptureEngine.cpp  moc_ICaptureEngine.cpp.d
build_mingw/ScreenLingo_autogen/6ZLIQGMFDZ/: moc_WindowsOcrEngine.cpp  moc_WindowsOcrEngine.cpp.d
build_mingw/ScreenLingo_autogen/FX4633N3NR/: moc_HotkeyManager.cpp  moc_HotkeyManager.cpp.d
build_mingw/ScreenLingo_autogen/ISMKEKEPX5/: moc_SignalBus.cpp  moc_SignalBus.cpp.d
build_mingw/ScreenLingo_autogen/LXWRGEM2EP/: moc_TranslatorManager.cpp  moc_TranslatorManager.cpp.d
build_mingw/ScreenLingo_autogen/QD3TEUTSKF/: moc_AreaSelector.cpp  moc_AreaSelector.cpp.d
build_mingw/ScreenLingo_autogen/QNGMSASXSL/: moc_OverlayManager.cpp  moc_OverlayManager.cpp.d  moc_TranslationOverlay.cpp  moc_TranslationOverlay.cpp.d
build_mingw/ScreenLingo_autogen/UMXHS6U622/: moc_TrayManager.cpp  moc_TrayManager.cpp.d
build_msvc/: ALL_BUILD.vcxproj  CMakeCache.txt  ScreenLingo.sln  ScreenLingo.vcxproj  ScreenLingo.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_msvc/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_msvc/ScreenLingo_autogen/: mocs_compilation_Debug.cpp
build_ninja/: CMakeCache.txt
build_vs/: CMakeCache.txt
docs/: DEPLOY.md
docs/superpowers/plans/: 2026-05-16-screenlingo-core.md
docs/superpowers/specs/: 2026-05-16-screenlingo-core-design.md
package/: glmocr_server.py  paddleocrvl_server.py
package/glmocr/: config.yaml
package/translations/: screenlingo_zh_CN.qm
resources/: dpiaware.manifest  screenlingo_zh_CN.ts
src/: main.cpp
src/app/: Application.cpp  Application.h  SignalBus.h
src/common/: Config.cpp  Config.h  LanguageManager.cpp  LanguageManager.h  Types.h
src/core/capture/: DxgiCaptureEngine.cpp  DxgiCaptureEngine.h  ICaptureEngine.h
src/core/ocr/: GlmOcrEngine.cpp  GlmOcrEngine.h  IOCREngine.h  OllamaOcrEngine.cpp  OllamaOcrEngine.h  PaddleOCREngine.cpp  PaddleOCREngine.h  PaddleOCRSubprocessEngine.cpp  PaddleOCRSubprocessEngine.h  WindowsOcrEngine.cpp  WindowsOcrEngine.h  WindowsOcrEngineStub.cpp
src/core/selection/: MouseSelectionMonitor.cpp  MouseSelectionMonitor.h
src/core/translate/: ITranslator.h  TranslatorManager.cpp  TranslatorManager.h
src/core/translate/plugins/: BaiduTranslator.cpp  (+13 more)
src/engine/hotkey/: HotkeyManager.cpp  HotkeyManager.h
src/engine/layout/: LayoutEngine.cpp  LayoutEngine.h
src/ui/floating/: FloatingToolbar.cpp  FloatingToolbar.h
src/ui/overlay/: AreaOverlay.cpp  AreaOverlay.h  OverlayManager.cpp  OverlayManager.h  TranslationOverlay.cpp  TranslationOverlay.h
src/ui/popup/: TranslationPopup.cpp  TranslationPopup.h
src/ui/selector/: AreaSelector.cpp  AreaSelector.h
src/ui/settings/: KeyCaptureDialog.cpp  KeyCaptureDialog.h  PromptManagerDialog.cpp  PromptManagerDialog.h  SettingsPanel.cpp  SettingsPanel.h
src/ui/subtitle/: SubtitleOverlay.cpp  SubtitleOverlay.h
src/ui/tray/: TrayManager.cpp  TrayManager.h
(+14 files in other folders)
